--- a/src/app/view/blog/blog.component.html
+++ b/src/app/view/blog/blog.component.html
@@ -26,9 +26,7 @@
                         </div>
                     </div>
                     
-                    <div class="loop-description"> 
-                        <p>This is the category description for your post category. You can change it here: Posts &gt; Categories. This is an excellent way to attract your users and explain what this category is all about and also explain what they can do in this category and how does it matter to them. This helps in SEO too!</p>
-                    </div>
+                    
                     <!-- .loop-description -->
                 </div>
                 <!-- .loop-meta -->
@@ -36,147 +34,38 @@
                 <!-- article start -->
                 <div class="post" *ngFor = "let blog of blogArr">
                     <div class="listing_img">
-                        <a href="" [routerLink]="['/blog_detail']" title="" rel="bookmark" class="featured-image-link">
-                            <img src="{{blog.thumb}}" alt="image">
-                        </a>
+                        <img src="{{blog.thumb}}" alt="image">
+                        
                     </div>
                     <div class="entry-header">
                         <h2 class="entry-title">
-                            <a itemprop="url" href="" [routerLink]="['/blog_detail']" title="" rel="bookmark">{{blog.blog_title}}</a>
+                            <a itemprop="url" href="" [routerLink]="['/blog_detail',blog.blog_id]"  title="" rel="bookmark">{{blog.blog_title}}</a>
                         </h2>
                         <div class="byline">Published by 
                             <span class="author vcard">
                                 <a class="url fn n" href="" title="Smith">{{blog.username}}</a>
                             </span> On 
-                            <abbr class="published" title="Saturday, August 27th, 2016, 3:39 pm">{{blog.create_date}}</abbr> 
+                            <abbr class="published" title="{{blog.create_date}}">{{blog.create_date}}</abbr> 
                             <a class="comments-link" href="" title="Comment on Reservation and Booking System + Multilevel Category Selection">Leave a response</a> 
                         </div>			
                         <div class="entry-summary" [innerHTML]="blog.blog_content">
-                          
-                                <a class="moretag" href="">Read More</a>
-                            <div class="single_custom_field"></div>					  
+                          				  
                         </div>
                         <!-- .entry-summary -->
 
                         <!-- #post -->
                     </div>		
                 </div>
-                <!-- article end -->
-                <!-- article start -->
-                <!-- <div class="post">
-                    <div class="listing_img">
-                        <a href="" title="Create &amp; manage content with Directory" rel="bookmark" class="featured-image-link">
-                            <img src="http://demo.templatic.com/eventum/../images/post/HiRes1-250x1653.jpg" alt="Create &amp; manage content with Directory">
-                        </a>
-                    </div>
-                    <div class="entry-header">
-                        <h2 class="entry-title">
-                            <a itemprop="url" href="" title="Create &amp; manage content with Directory" rel="bookmark">Create &amp; manage content with Directory</a>
-                        </h2>
-                        <div class="byline">Published by 
-                            <span class="author vcard">
-                                <a class="url fn n" href="" title="Allen Parker">Allen Parker</a>
-                            </span> On 
-                            <abbr class="published" title="Wednesday, April 9th, 2014, 9:44 am">Apr 9, 2014</abbr> 
-                            <a class="comments-link" href="" title="Comment on Create &amp; manage content with Directory">Leave a response</a> 
-                        </div>			
-                        <div class="entry-summary">
-                            <p>Directory is our brand new platform that encompasses a parent theme, various plugins and a wide selection of child themes. It is the most advanced theme we have&nbsp; ever created with literally hundreds of custom features. Read this page to learn more about the stuff you can create and manage… 
-                                <a class="moretag" href="">Read More</a>
-                            </p>
-                            <div class="single_custom_field"></div>					  
-                        </div>
-                        <!- .entry-summary -->
-                        <!-- #post 
-                    </div>		
-                </div> -->
-                <!-- article end -->
-                <!-- article start -->
-                <!-- <div class="post ">
-                    <div class="listing_img">
-                        <a href="" title="Make money with Directory" rel="bookmark" class="featured-image-link">
-                            <img src="http://demo.templatic.com/eventum/../images/post/directory_theme_blog15.jpg" alt="Make money with Directory">
-                        </a>
-                    </div>
-                    <div class="entry-header">
-                        <h2 class="entry-title">
-                            <a itemprop="url" href="" title="Make money with Directory" rel="bookmark">Make money with Directory</a>
-                        </h2>
-                        <div class="byline">Published by 
-                            <span class="author vcard">
-                                <a class="url fn n" href="" title="Smith">Smith</a>
-                            </span> On 
-                            <abbr class="published" title="Wednesday, April 9th, 2014, 9:01 am">Apr 9, 2014</abbr> 
-                            <a class="comments-link" href="" title="Comment on Make money with Directory">Leave a response</a> 
-                        </div>			
-                        <div class="entry-summary">
-                            <p>Directory is our brand new platform that encompasses a parent theme, various plugins and a wide selection of child themes. It is the most advanced theme we have ever created with literally hundreds of custom features. Read this page to learn more about the ways in which Directory can earn… 
-                                <a class="moretag" href="">Read More</a>
-                            </p>
-                            <div class="single_custom_field"></div>					  
-                        </div>
-                        <!-- .entry-summary -->
-                        <!-- #post -
-                    </div>		
-                </div> -->
-                <!-- article end -->
-                <!-- article start -->
-               <!--  <div class="post ">
-                    <div class="listing_img">
-                        <a href="" title="Responsive Portfolio Theme from Templatic" rel="bookmark" class="featured-image-link"><img src="http://demo.templatic.com/eventum/../images/post/spotfinder-wordpress-directory-theme-child-responsive-place-listing-250x1654.jpg" alt="Responsive Portfolio Theme from Templatic"></a>
-                    </div>
-                    <div class="entry-header">
-                        <h2 class="entry-title"><a itemprop="url" href="" title="Responsive Portfolio Theme from Templatic" rel="bookmark">Responsive Portfolio Theme from Templatic</a></h2><div class="byline">Published by <span class="author vcard"><a class="url fn n" href="" title="Russell West">Russell West</a></span> On <abbr class="published" title="Wednesday, April 24th, 2013, 1:58 pm">Apr 24, 2013</abbr> <a class="comments-link" href="" title="Comment on Responsive Portfolio Theme from Templatic">11 Responses</a> </div>			
-                        <div class="entry-summary">
-                            <p>Cartsy e-commerce theme from Templatic on Vimeo.</p>
-                            <div class="single_custom_field"></div>					  
-                        </div>
-                        <!-- .entry-summary -->
-                        <!-- #post -->
-                    <!-- div>		
-                </div> -->
-                <!-- article end -->
-                <!-- article start -->
-               <!--  <div class="post">
-                    <div class="listing_img">
-                        <a href="" title="Markup And Formatting" rel="bookmark" class="featured-image-link"><img src="http://demo.templatic.com/eventum/../images/post/alignment-feature2-250x1651-1.jpg"></a>
-                    </div>
-                    <div class="entry-header">
-                        <h2 class="entry-title"><a itemprop="url" href="" title="Markup And Formatting" rel="bookmark">Markup And Formatting</a></h2><div class="byline">Published by <span class="author vcard"><a class="url fn n" href="" title="Smith">Smith</a></span> On <abbr class="published" title="Friday, January 11th, 2013, 8:22 pm">Jan 11, 2013</abbr> <a class="comments-link" href="" title="Comment on Markup And Formatting">Leave a response</a> </div>			
-                        <div class="entry-summary">
-                            <p>Headings Header one Header two Header three Header four Header five Header six Blockquotes Single line blockquote: Stay hungry. Stay foolish. Multi line blockquote with a cite reference: People think focus means saying yes to the thing you’ve got to focus on. But that’s not what it means at all…. <a class="moretag" href="">Read More</a></p>
-                            <div class="single_custom_field"></div>					  
-                        </div>
-                        <!-- .entry-summary -->
-
-                        <!-- #post -->
-                    <!-- </div>		
-                </div> --> 
-                <!-- article end -->
-                <!-- article start -->
-               <!--  <div class="post ">
-                    <div class="listing_img">
-                        <a href="" title="Markup: HTML Tags and Formatting" rel="bookmark" class="featured-image-link"><img src="http://demo.templatic.com/eventum/../images/post/alignment-feature2-250x1651-1.jpg"></a>
-                    </div>
-                    <div class="entry-header">
-                        <h2 class="entry-title"><a itemprop="url" href="" title="Markup: HTML Tags and Formatting" rel="bookmark">Markup: HTML Tags and Formatting</a></h2><div class="byline">Published by <span class="author vcard"><a class="url fn n" href="" title="Smith">Smith</a></span> On <abbr class="published" title="Friday, January 11th, 2013, 8:22 pm">Jan 11, 2013</abbr> <a class="comments-link" href="" title="Comment on Markup: HTML Tags and Formatting">Leave a response</a> </div>			
-                        <div class="entry-summary">
-                            <p>Headings Header one Header two Header three Header four Header five Header six Blockquotes Single line blockquote: Stay hungry. Stay foolish. Multi line blockquote with a cite reference: People think focus means saying yes to the thing you’ve got to focus on. But that’s not what it means at all…. <a class="moretag" href="">Read More</a></p>
-                            <div class="single_custom_field"></div>					  
-                        </div>
-                        <!-- .entry-summary -->
-                        <!-- #post -->
-                    <!-- /div>		
-                </div>  -->
-                <!-- article end -->
-            <!-- </div> -->
-            <!-- .hfeed -->
+         
             </div>
-            <div class="col-sm-12 text-center pagination loop-pagination">
-                <span class="page-numbers current"><strong>1</strong></span>
-                <a class="page-numbers" href=""><strong>2</strong></a>
-                <a class="next page-numbers" href=""> <strong class="next page-numbers">Next</strong></a>
-            </div>  
+            
+           
+
+                <div class="postpagination_776778595 postpagination clearfix">
+                <div class="pagination" *ngFor="let object of createRange(blogTotal)">
+                <a href="javascript:void(0)" [ngClass]="{'active': object==currentPage}" (click)="getBlogPagination(object)" > {{object}} </a>
+                </div>
+                </div>
 
         </section>
 
