--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -6,7 +6,7 @@
             <div class="breadcrumb-trail">
                 <span class="trail-begin">
 
-                    <a href="#" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york" title="New York">New York</a> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york/event" title="Event">Event</a> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york/ecategory/events/" title="Events">Events</a> <span class="sep">»</span> <span class="trail-end">{{event.event_title}}</span>
+                    <a href="#" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york" title="New York">New York</a> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york/event" title="Event">Event</a> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york/ecategory/events/" title="Events">Events</a> <span class="sep">»</span> <span class="trail-end">{{data.event_data.event_title}}</span>
 
   
             </div>
@@ -20,7 +20,7 @@
                 <!--start post type title -->
                 <header class="entry-header clearfix">
                     <div class="entry-header-title">
-                        <h1 class="entry-title ">{{event.event_title}}</h1>
+                        <h1 class="entry-title ">{{data.event_data.event_title}}</h1>
                         <div class="event_rating">
                             <div class="event_rating_row"> <span><a href="#comments">8 Reviews</a></span> <span class="single_rating"> <i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i><i class="rating-on"></i></span></div>
                         </div>
@@ -148,35 +148,35 @@
                         <div class="entry-header-custom-wrap p-tb-30">
                             <p class="date">
                                 <label>Start Date:</label>
-                                <span id="frontend_date_st_date" class="event_custom frontend_st_date">{{event.start_date}}</span></p>
+                                <span id="frontend_date_st_date" class="event_custom frontend_st_date">{{data.event_data.start_date}}</span></p>
 
                             <p class="date">
                                 <label>End Date:</label>
-                                <span id="frontend_date_end_date" class="frontend_end_date frontend_datepicker event_custom">{{event.end_date}}</span>
+                                <span id="frontend_date_end_date" class="frontend_end_date frontend_datepicker event_custom">{{data.event_data.end_date}}</span>
                             </p>
                             <p class="hosted">
                                 <label>Hosted By:</label>
-                                <span class="event_custom">{{event.organizer}}</span>
+                                <span class="event_custom">{{data.event_data.organizer}}</span>
                             </p>
                             <p class="audience">
                                 <label>Intended Audience:</label>
-                                <span class="event_custom">{{event.audience}} </span>
+                                <span class="event_custom">{{data.event_data.audience}} </span>
                             </p>
                             <p class="time">
                                 <label>Time:</label>
-                                <span class="event_custom">{{event.start_time}} To {{event.end_time}}</span>
+                                <span class="event_custom">{{data.event_data.start_time}} To {{data.event_data.end_time}}</span>
                             </p>
                             <p class="address">
                                 <label>Event Location:</label>
-                                <span id="frontend_address" class="event_custom frontend_address">{{event.location}}</span>
+                                <span id="frontend_address" class="event_custom frontend_address">{{data.event_data.location}}</span>
                             </p>
                             <p class="website">
                                 <label>Website: </label>
-                                <span class="event_custom"><a id="website" class="frontend_website " href="http://geekmeet.com">{{event.location}}</a></span>
+                                <span class="event_custom"><a id="website" class="frontend_website " href="http://geekmeet.com">{{data.event_data.location}}</a></span>
                             </p>
                             <p class="phone ">
                                 <label>Contact Info: </label>
-                                <span id="phone" class="listing_custom frontend_phone">{{event.contact_info}}</span>
+                                <span id="phone" class="listing_custom frontend_phone">{{data.event_data.contact_info}}</span>
                             </p>
                             <p class="fees">
                                 <label>Ticket Info: </label>
@@ -189,7 +189,7 @@
                     <img alt="" src="http://0.gravatar.com/avatar/?s=60&amp;r=g" srcset="http://0.gravatar.com/avatar/?s=120&amp;r=g 2x" class="avatar avatar-60 photo avatar-default" height="60" width="60">	
                     <span id="attend_event_27121" class="fav">
                         <span class="span_msg">
-                            <a href="http://demo.templatic.com/eventum/author/"></a> are you going to attend <strong>{{event.event_title}}</strong>? <br>     	
+                            <a href="http://demo.templatic.com/eventum/author/"></a> are you going to attend <strong>{{data.event_data.event_title}}</strong>? <br>     	
                             <a href="javascript:void(0);" class="addtofav b_review attending" data-reveal-id="tmpl_reg_login_container" onclick="javascript:addTo_AttendEvent(27121, 'add');">Yes, I am&nbsp;</a>
                             <span id="attended_persons" class="attended_persons">No one is attending yet.</span>
                         </span>
@@ -296,41 +296,41 @@
                     <section itemprop="description" class="entry-content event-description">
                         <h2>Event Description <small></small></h2>
                         <div class="entry-content frontend-entry-content ">
-                        <p [innerHTML]="event.event_description"></p>
+                        <p [innerHTML]="data.event_data.event_description"></p>
                         </div>
                     </section><!-- end .entry-content -->
-                    <div *ngIf="event.org_name!=null">
+                    <div *ngIf="data.event_data.org_name!=null">
                     <div class="event-organizer" >
                         <h2>Organizers</h2>
 
                         <div class="event-organizer-left">
-                            <img src="{{event.organization_logo}}" title="{{event.organization_logo_title}}">
+                            <img src="{{data.event_data.organization_logo}}" title="{{data.event_data.organization_logo_title}}">
                         </div>
 
                         <div class="event-organizer-right">
                             <p class="org_name ">
                                 <label>Name:</label>
-                                <span class="label_data frontend_organizer_name">{{event.org_name}}</span>
+                                <span class="label_data frontend_organizer_name">{{data.event_data.org_name}}</span>
                             </p>
-                            <p class="address" *ngIf="event.organization_location!=''">
+                            <p class="address" *ngIf="data.event_data.organization_location!=''">
                                 <label>Address:</label>
-                                <span class="label_data frontend_organizer_address">{{event.organization_location}}</span>
+                                <span class="label_data frontend_organizer_address">{{data.event_data.organization_location}}</span>
                             </p>
                             
-                            <p class="phone" *ngIf="event.organization_contact!=''">
+                            <p class="phone" *ngIf="data.event_data.organization_contact!=''">
                                 <label>Mobile:</label>
-                                <span class="label_data frontend_organizer_mobile">{{event.organization_contact}}</span>
+                                <span class="label_data frontend_organizer_mobile">{{data.event_data.organization_contact}}</span>
                             </p>
                             <!--googleon: all-->
-                            <p class="email" *ngIf="event.organization_email!=''">
+                            <p class="email" *ngIf="data.event_data.organization_email!=''">
                                 <label>Email:</label>
-                                <span class="label_data frontend_organizer_email">{{event.organization_email}}</span>
+                                <span class="label_data frontend_organizer_email">{{data.event_data.organization_email}}</span>
                             </p>
 
-                            <p class="website" *ngIf="event.organization_website!=''">
+                            <p class="website" *ngIf="data.event_data.organization_website!=''">
                                 <label>Website:</label>
                                 <span class="label_data frontend_organizer_website">
-                                    <a target="_blank" href="">{{event.organization_website}}</a>
+                                    <a target="_blank" href="">{{data.event_data.organization_website}}</a>
                                 </span>
                             </p>
                         </div>
@@ -338,7 +338,7 @@
                     <div class="abput-event-organizer ">
                         <h2>About the organizers</h2>
                         <div class="frontend_organizer_desc ">
-                            <p [innerHTML]="event.organization_description"></p>             
+                            <p [innerHTML]="data.event_data.organization_description"></p>             
                         </div>
                     </div>
                     </div>
@@ -351,7 +351,7 @@
                         <p class="">
                             <label>Phone:&nbsp;</label>                                                                                                                                            
                             <span>
-                                {{event.contact_info}}                                                                          
+                                {{data.event_data.contact_info}}                                                                          
                             </span>
                         </p>
                     </div>
@@ -927,67 +927,25 @@
                 </div>
             </div>
 
-            <div id="templatic_popular_post_technews-2" class="widget widget-twocolumn popular_posts" >
+            <div id="templatic_popular_post_technews-2" class="widget widget-twocolumn popular_posts">
                 <h3 class="widget-title">Popular Events</h3>
                 <ul class="listingview clearfix list" id="list_776778595">
-                    <li class="clearfix" *ngFor = "let popular_event of popularArr">
-                            <a href="" title="Things To Do" class="link_img" data-rel="">
-                            <img src="http://demo.templatic.com/eventum/../images/event/event-(70)-60x60.jpg" alt="Things To Do" class="Thumbnail thumbnail popular_post-thumbnail " width="60" height="60"></a>
+                    <li class="clearfix" *ngFor = "let popular_event of data.popular_event.popularArr">
+                            <a href="" title="{{popular_event.event_title}}" class="link_img" data-rel="">
+                            <img src="{{ popular_event.featured_image }}" alt="{{popular_event.event_title}}" class="Thumbnail thumbnail popular_post-thumbnail " width="60" height="60"></a>
 
-                            <div class="post_data"><h3><a href="http://demo.templatic.com/eventum/city/new-york/event/things-to-do/" title="Things To Do">Things To Do</a></h3><p><span class="views"> <a href="http://demo.templatic.com/eventum/city/new-york/event/things-to-do/#comments">8 Comments</a></span><span class="date">2 years ago</span></p></div></li>
+                            <div class="post_data"><h3><a href="http://demo.templatic.com/eventum/city/new-york/event/things-to-do/" title="{{popular_event.event_title}}">{{popular_event.event_title}}</a></h3><p><span class="views"> <a href="http://demo.templatic.com/eventum/city/new-york/event/things-to-do/#comments">8 Comments</a></span><span class="date">2 years ago</span></p></div></li>
 
 
                 </ul>
                 
                 <div class="postpagination_776778595 postpagination clearfix">
-       
-                    <a num="1" rel="0" rev="3" class="active"> 1 </a>
-                    <a num="2" rel="3" rev="3" class="">2</a>
-                    <a num="3" rel="6" rev="3" class="">3</a>			
+                <div class="pagination" *ngFor="let object of createRange(data.popular_event.popularTotal)">
+                <a href="javascript:void(0)" [ngClass]="{'active': object==data.popular_event.currentPage}" (click)="getEventPagination(object)" > {{object}} </a>
                 </div>
-                <script type="text/javascript">
-                    jQuery(document).ready(function () {
-                        var ajaxUrl = "http://demo.templatic.com/eventum/wp-admin/admin-ajax.php";
-                        var limitarr = [0, 3, 7, 'event', 1, 'comments', 7, '', 'comments', '27'];
+                </div>
 
-                        /* whyen tevolution activated load popular post with custom ajax only */
-
-                        if (tevolutionajaxUrl != '') {
-                            var ajaxUrl = tevolutionajaxUrl;
-                        }
-                        /* Ajax request for populer posts when click on pages */
-                        jQuery('.postpagination_776778595 a').click(function ()
-                        {
-                            var start = parseInt(jQuery(this).attr('rel'));
-                            var end = parseInt(jQuery(this).attr('rev'));
-                            var num = parseInt(jQuery(this).attr('num'));
-                            limitarr = [0, 3, 7, 'event', num, 'comments', 7, '', 'comments', '27'];
-                            jQuery('.postpagination a').attr('class', '');
-                            jQuery(this).attr('class', 'active');
-
-                            jQuery.ajax({
-                                url: ajaxUrl,
-                                type: 'POST',
-                                async: true,
-                                data: 'action=load_populer_post&limitarr=' + limitarr,
-                                success: function (results) {
-                                    jQuery('#list_776778595').html(results);
-                                }
-                            });
-                        });
-
-                        /* Ajax request for populer posts when page loads */
-                        jQuery.ajax({
-                            url: ajaxUrl,
-                            type: 'POST',
-                            async: true,
-                            data: 'action=load_populer_post&limitarr=' + limitarr,
-                            success: function (results) {
-                                jQuery('#list_776778595').html(results);
-                            }
-                        });
-                    });
-                </script>
+               
             </div>
 
             <!-- 300x150 ad_space -->
