--- a/src/app/view/layouts/second-menu/second-menu.component.html
+++ b/src/app/view/layouts/second-menu/second-menu.component.html
@@ -11,7 +11,7 @@
                         <ul id="menu-secondary-items" class="mega">
                             <!-- <li  *ngFor = "let category of menuArr let index = index"><a href="">{{category.category_name}}</a></li> -->
 
-                            <li *ngFor="let category of menuArr; let index = index" class="event_category"><a href="javascript:void(0)">{{category.category_name}}</a></li>
+                            <li *ngFor="let category of menuArr; let index = index" class="event_category" (click)="sbmenuClick(category.category_name)"><a href="javascript:void(0)">{{category.category_name}}</a></li>
                          
                         </ul>
                     </div>  
