create blog view

--- a/src/app/assets/css/blog/blog.component.css
+++ b/src/app/assets/css/blog/blog.component.css
@@ -3,3 +3,10 @@ body {
     height: 0%!important;
     /*-webkit-appearance: none;*/
 }
+
+.postpagination a {
+    font-weight: bold;
+    height: 36px !important;
+    line-height: 35px !important;
+    width: 36px !important;
+}
