--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <app-second-menu></app-second-menu>
-<section id="main" class="clearfix event_detail_module" *ngFor = "let event of eventDetail">
+<section id="main" class="clearfix event_detail_module">
     <div class="wrap row">
         <div class="breadcrumb breadcrumbs columns">
             <div class="breadcrumb-trail">
@@ -568,9 +568,9 @@
                                             <abbr class="comment-date" title="Tuesday, October 8th, 2013, 5:31 pm">Oct 8, 2013
                                             </abbr> at <abbr class="comment-time" title="Tuesday, October 8th, 2013, 5:31 pm">5:31 pm</abbr>
                                         </span> 
-                                        <span class="comment-reply">
-                                            <a href="">Log in to reply.</a>
-                                        </span>
+                                        <span class="comment-reply" data-toggle="modal" data-target="#comment">
+                                                    <a>Log in to reply.</a>
+                                                </span>
                                     </div>	
                                 </div>
                                 <!-- #comment-## -->
@@ -964,6 +964,25 @@
         <!--end single post type sidebar --> 
         <!-- end  content part-->
     </div>
+
+
     <!-- .wrap -->
+
+   <!--  <div style="background-color: transparent;" class="modal fade" id="comment" tabindex="-1" role="dialog" aria-labelledby="modalLabel">
+                  <div class="modal-dialog" style="width: 390px;" >
+                    <div class="modal-content">
+                        <div class="modal-header" id="sign_in_modal">
+                            <button id="closeLoginModal" type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+                            <h3 class="modal-title" id="lineModalLabel">Reply</h3>
+                        </div>
+                        <div class="modal-body">
+                            <label>Comment :</label>
+                            <textarea id="comment" name="comment" placeholder="Message" cols="100%" rows="10" tabindex="4" style="width:360px; height: 154px;"></textarea>
+                            <label>Rating :</label>
+                            <div class="container" style="width: 300px;margin: 0;padding: 0;">
+                                <rating [(ngModel)]="starsCount"></rating>
+                            </div>
+                            <button class="btn btn-info" type="submit" style="margin: 20px 0px 10px 0px; ">Submit Reply</button>
+                        </div> -->
 </section>
 <app-footer></app-footer>
