--- a/src/app/view/index/index.component.html
+++ b/src/app/view/index/index.component.html
@@ -22,7 +22,7 @@
 </div>
 <body style="height: 100%;">
 <!-- <?php include './second_menu.php'; ?> -->
-<app-second-menu></app-second-menu>
+<app-second-menu (onMenuChange)="onchange($event)"></app-second-menu>
 
 <section id="main" class="clearfix">
     <div class="wrap row">
