--- a/src/app/view/layouts/second-menu/second-menu.component.html
+++ b/src/app/view/layouts/second-menu/second-menu.component.html
@@ -10,10 +10,8 @@
                     <div class="menu">
                         <ul id="menu-secondary-items" class="mega">
                             <!-- <li  *ngFor = "let category of menuArr let index = index"><a href="">{{category.category_name}}</a></li> -->
-
-
-                            <li  *ngFor="let category of menuArr; let index = index" >
-                            <a href="javascript:void(0)" (click)="getEventByCategory(category.category_name)">{{category.category_name}}</a>
+                            <li [ngClass] = "{'current-menu-item current_page_item':(index==selectedIndex)}"  *ngFor="let category of menuArr; let index = index" >
+                            <a href="javascript:void(0)" (click)="getEventByCategory(category.category_name,index)">{{category.category_name}}</a>
                             </li>
 
                          
