show all events by category wise

--- a/src/app/view/blog/blog.component.html
+++ b/src/app/view/blog/blog.component.html
@@ -5,7 +5,7 @@
         <div class="breadcrumb breadcrumbs columns">
             <div class="breadcrumb-trail">
                 <span class="trail-begin">
-                    <a href="" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> 
+                    <a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> 
                 <span>Blog</span>
             </div>
         </div>
