--- a/src/app/view/changepassword/changepassword.component.html
+++ b/src/app/view/changepassword/changepassword.component.html
@@ -5,7 +5,7 @@
         <div class="breadcrumb breadcrumbs columns">
             <div class="breadcrumb-trail">
                 <span class="trail-begin">
-                    <a href="" title="wamasoftware" rel="home" class="trail-begin">Home</a>
+                    <a [routerLink]="['/']" title="wamasoftware" rel="home" class="trail-begin">Home</a>
                 </span> 
                 <span class="sep">»</span> 
                 <span class="trail-end">Change Password</span>
