--- a/src/app/view/layouts/header/header.component.html
+++ b/src/app/view/layouts/header/header.component.html
@@ -92,9 +92,9 @@
                             <!-- #menu-primary-title -->
                             <div class="menu">
                                 <ul id="menu-primary-items" class="primary_menu clearfix">
-                                    <li class=""><a>Events</a>
+                                    <li class=""><a [routerLink]="['/event']">Events</a>
                                         <ul class="sub-menu">
-                                            <li class="" *ngFor = "let submenu of menuArr" (click)="submenuClick(submenu.category_name)" ><a>{{submenu.category_name}}</a></li>
+                                            <li class="" *ngFor = "let submenu of menuArr; let index = index" (click)="submenuClick(submenu.category_name,index)" ><a>{{submenu.category_name}}</a></li>
                                         </ul>
                                     </li>
                                     <li class=""><a href="" [routerLink]="['/blog']" > Blog</a></li>
