--- a/src/app/view/blog-detail/blog-detail.component.html
+++ b/src/app/view/blog-detail/blog-detail.component.html
@@ -6,7 +6,7 @@
         <div class="breadcrumb breadcrumbs columns">
             <div class="breadcrumb-trail">
                 <span class="trail-begin">
-                    <a href="" title="wamasoftware" rel="home" class="trail-begin">Home</a>
+                    <a [routerLink]="['/']" title="wamasoftware" rel="home" class="trail-begin">Home</a>
                 </span> 
                 <span class="sep">»</span> 
                 <a href="" title="News">Blog</a>
