--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -6,7 +6,7 @@
             <div class="breadcrumb-trail">
                 <span class="trail-begin">
 
-                    <a href="#" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york" title="New York">New York</a> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york/event" title="Event">Event</a> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york/ecategory/events/" title="Events">Events</a> <span class="sep">»</span> <span class="trail-end">{{data.event_data.event_title}}</span>
+                    <a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york" title="New York">New York</a> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york/event" title="Event">Event</a> <span class="sep">»</span> <a href="http://demo.templatic.com/eventum/city/new-york/ecategory/events/" title="Events">Events</a> <span class="sep">»</span> <span class="trail-end">{{data.event_data.event_title}}</span>
 
                     
                 </div>
