--- a/src/app/view/eventadd/eventadd.component.html
+++ b/src/app/view/eventadd/eventadd.component.html
@@ -6,7 +6,7 @@
         <div class="breadcrumb breadcrumbs columns">
             <div class="breadcrumb-trail">
                 <span class="trail-begin">
-                    <a href="#" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <span>Event Add</span>
+                    <a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <span>Event Add</span>
             </div>
         </div>
 
