--- a/src/app/view/groups/groups.component.html
+++ b/src/app/view/groups/groups.component.html
@@ -6,7 +6,7 @@
         <div class="breadcrumb breadcrumbs columns">
             <div class="breadcrumb-trail">
                 <span class="trail-begin">
-                    <a href="#" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <span>Groups</span> <span class="sep">»</span> <span>Dallas php</span>
+                    <a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <span>Groups</span> <span class="sep">»</span> <span>Dallas php</span>
             </div>
         </div>
         <!-- start content part-->
