--- a/src/app/view/index/index.component.html
+++ b/src/app/view/index/index.component.html
@@ -47,8 +47,8 @@
                                 <section id="loop_listing_taxonomy" class="widget_loop_taxonomy_wrap  grid">
                                     <!-- inside loop div start -->
                                     <article id="event_27121" class="post large-4 medium-4 small-6 xsmall-12 columns post" *ngFor = "let events of popularArr">
-                                        <div class="listing_img">
-                                            <a [routerLink]="['/event_detail',events.event_id]"> 
+                                        <div class="listing_img" (click)="goToEventDetail(events.event_id)">
+                                            <a> 
                                             <img src="{{events.featured_image}}" alt="image" title="{{events.title}}">
                                            </a>
                                         </div>
