--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -5,7 +5,7 @@
         <div class="breadcrumb breadcrumbs columns">
             <div class="breadcrumb-trail">
                 <span class="trail-begin">
-                    <a href="#" title="GeekMeet" rel="home" class="trail-begin">Home</a>
+                    <a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a>
                 </span> 
                 <span class="sep">»</span> <span>Profile</span>
             </div>
@@ -22,45 +22,45 @@
             <div class="author_cont">
                 <!-- Author photo on left side start -->
                 <div class="author_photo">
-                    <img src="app/assets/images/avatars/team3.jpg" alt="admin" title="admin">			
+                    <img src="{{userInfoArr.image_url}}" alt="image" title="image">			
                 </div>
                 <!-- Author photo on left side end -->
 
                 <!-- Author photo on right side start -->
                 <div class="right_box">
-                    <h2>Wama Software</h2>
+                    <h2>{{userInfoArr.first_name}} {{userInfoArr.last_name}}</h2>
                     <div class="user_dsb_cf">
                         <div>
                             <label><i class="fa fa-home"></i> Address :</label>
-                            <span><p>New Street, near past colony, UA</p></span>
+                            <span><p>{{userInfoArr.address}}</p></span>
                         </div>
                         <div>
                             <label><i class="fa fa-calendar"></i> Birth date :</label>
-                            <span><p>04-07-1994</p></span>
+                            <span><p>{{userInfoArr.dob}}</p></span>
                         </div>
                         <div>
                             <label><i class="fa fa-hospital-o"></i> Birth place :</label>
-                            <span><p>New-York</p></span>
+                            <span><p>{{userInfoArr.birth_place}}</p></span>
                         </div>
                         <div>
                             <label><i class="fa fa-male"></i> Gender :</label>
-                            <span><p>Male</p></span>
+                            <span><p>{{userInfoArr.gender}}</p></span>
                         </div>
                         <div>
                             <label><i class="fa fa-building-o"></i> City :</label>
-                            <span><p>San Francisco</p></span>
+                            <span><p>{{userInfoArr.city_name}}</p></span>
                         </div>
                         <div>
                             <label><i class="fa fa-codepen"></i> Zip Code :</label>
-                            <span><p>94107</p></span>
+                            <span><p>{{userInfoArr.zip_code}}</p></span>
                         </div>
                         <div>
                             <label><i class="fa fa-envelope-o"></i> Email :</label>
-                            <span>wama.software@gmail.com</span>
+                            <span>{{userInfoArr.email}}</span>
                         </div>
                         <div>
                             <label><i class="fa fa-phone"></i> Phone :</label>
-                            <span>9876543210</span>
+                            <span>{{userInfoArr.phone}}</span>
                         </div>
                         <div>
                             <label><i class="fa fa-list"></i> Interest Topic:</label>
@@ -75,7 +75,7 @@
                         </div>
                         <div>
                             <label><i class="fa fa-user"></i> About Me :</label>
-                            <span><p> This is About the Author section, author himself can add this from his edit profile section. They can write about their experiences with your site.</p></span>
+                            <span><p>{{userInfoArr.about_me}}</p></span>
                         </div>
                     </div>
 
