--- a/src/app/view/index/index.component.html
+++ b/src/app/view/index/index.component.html
@@ -193,6 +193,7 @@
                                                 <!--Start Post Content -->
                                                 <div class="entry-summary" itemprop="description">
                                                 <p [innerHTML]="upcomingevents.event_description"></p>
+                                                <a *ngIf="upcomingevents.read_more==1" [routerLink]="['/event_detail']" >Read More</a>
                                                
                                                 </div>                                                                        <!-- End Post Content -->
                                                 <div class="rev_pin"><ul> 
