--- a/src/app/view/edit-profile/edit-profile.component.html
+++ b/src/app/view/edit-profile/edit-profile.component.html
@@ -18,33 +18,33 @@
                 <h3>Edit Profile</h3>
             </div>
 
-            <form name="profile edit" id="event-add" action="#" method="post">
+            <form name="profile edit" id="event-add" action="#" method="post" enctype="multipart/form-data" #editProfileForm="ngForm" (ngSubmit)="updateUserProfile(editProfileForm.value)">
                 <div class="event-edit-form large-9 small-12 columns">
                     <div class="form_row clearfix">
                         <label>Profile Photo<span class="indicates">*</span></label>
                         <div class="col-sm-10 -m-rl-15">
-                            <input type="file" name="" value="" class="form-control textfield"> 
+                            <input type="file" name="image" value="" class="form-control textfield" ngModel> 
                         </div>
                     </div>
                     <div class="form_row clearfix">
                         <label>First Name <span class="indicates">*</span></label>
-                        <input type="text" name="" id="" value="Wama" class="form-control textfield"> 
+                        <input type="text" name="first_name" id="" value="{{userInfoArr.first_name}}" class="form-control textfield" ngModel> 
                     </div>
                     <div class="form_row clearfix">
                         <label>Last Name <span class="indicates">*</span></label>
-                        <input type="text" name="" id="" value="Software" class="form-control textfield"> 
+                        <input type="text" name="last_name" id="" value="{{userInfoArr.last_name}}" class="form-control textfield" ngModel> 
                     </div>
                     <div class="form_row clearfix">
                         <label>Address <span class="indicates">*</span></label>
-                        <textarea class="textfield" placeholder="New street, near past colony, UA" style="height: 100px"></textarea> 
+                        <textarea class="textfield" name="address" placeholder="{{userInfoArr.address}}" style="height: 100px" ngModel></textarea> 
                     </div>
                     <div class="form_row clearfix">
                         <label>Birth date<span class="indicates">*</span></label>
-                        <input type="text" id="birth-date" placeholder="04-07-1994" class="form-control textfield"> 
+                        <input type="text" name="dob" id="birth-date" placeholder="{{userInfoArr.dob}}" class="form-control textfield" ngModel> 
                     </div>
                     <div class="form_row clearfix">
                         <label>Birth place<span class="indicates">*</span></label>
-                        <input type="text" name="" id="" value="New-York" class="textfield"> 
+                        <input type="text" name="birth_place" id="" value="{{userInfoArr.birth_place}}" class="textfield" ngModel> 
                     </div>
                     <div class="form_row clearfix">
                         <label>Gender <span class="indicates">*</span></label>
@@ -55,24 +55,24 @@
                     </div>
                     <div class="form_row clearfix">
                         <label>City<span class="indicates">*</span></label>
-                        <input type="text" name="" id="" value="San Francisco" class="form-control textfield"> 
+                        <input type="text" name="city_name" id="" value="{{userInfoArr.city_name}}" class="form-control textfield" ngModel> 
                     </div>
                     <div class="form_row clearfix">
                         <label>Zip Code<span class="indicates">*</span></label>
-                        <input type="text" name="" id="" value="94107" class="form-control textfield"> 
+                        <input type="text" name="zip_code" id="" value="{{userInfoArr.zip_code}}" class="form-control textfield" ngModel> 
                     </div>
                     <div class="form_row clearfix">
                         <label>Email<span class="indicates">*</span></label>
-                        <input type="email" name="" value="wama.software@gmail.com" class="form-control textfield">
+                        <input type="email" name="email" value="{{userInfoArr.email}}" class="form-control textfield" ngModel>
                     </div>
                     <div class="form_row clearfix">
                         <label>Contact</label>
-                        <input type="tel" name="" value="9876543210" class="form-control textfield"> 
+                        <input type="tel" name="phone" value="{{userInfoArr.phone}}" class="form-control textfield" ngModel> 
                     </div>
                     <div class="form_row clearfix">
                         <label>Interest Topic</label>
                         <div class="col-sm-12 -m-rl-15">
-                            <select id="multiple" class="textfield select2-multiple" multiple>
+                            <select id="multiple" class="textfield select2-multiple" multiple ngModel name="favorite_category[]"> 
                                 <optgroup label="Tech">
                                     <option>Cisco</option>
                                     <option>Database</option>
@@ -86,10 +86,10 @@
                     </div>
                     <div class="form_row clearfix">
                         <label>About Me</label>
-                        <textarea class="ckeditor form-control" name="editor1" rows="6"></textarea>
+                        <textarea class="ckeditor form-control" name="about_me" rows="6" ngModel>{{userInfoArr.about_me}}</textarea>
                     </div>
                     <div class="form_row ">
-                        <a class="btn btn-warning" type="submit" value="Save" name="submit">Update</a>
+                        <button class="btn btn-warning" type="submit">Update</button>
                         <a class="btn btn-warning" type="reset" value="Save" name="submit">Cancel</a>	
                     </div>
                 </div>
